force-app/main/default/objects/Account/fields/RH_Cap__c.field-meta.xml
<CustomField>
    <fullName>RH_Cap__c</fullName>
    <label>Cap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>