force-app/main/default/objects/Account/fields/RH_Citta__c.field-meta.xml
<CustomField>
    <fullName>RH_Citta__c</fullName>
    <label>Citta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>