force-app/main/default/objects/Account/fields/RH_Email__c.field-meta.xml
<CustomField>
    <fullName>RH_Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>