force-app/main/default/objects/Account/fields/RH_NumeroCivico__c.field-meta.xml
<CustomField>
    <fullName>RH_NumeroCivico__c</fullName>
    <label>RH Numero Civico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>