force-app/main/default/objects/Account/fields/RH_Piva__c.field-meta.xml
<CustomField>
    <fullName>RH_Piva__c</fullName>
    <label>Plva/CF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>