force-app/main/default/objects/Account/fields/RH_Regione__c.field-meta.xml
<CustomField>
    <fullName>RH_Regione__c</fullName>
    <label>Regione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>