force-app/main/default/objects/Account/fields/RH_SDI__c.field-meta.xml
<CustomField>
    <fullName>RH_SDI__c</fullName>
    <label>SDI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>