force-app/main/default/objects/Account/fields/RH_Telefono__c.field-meta.xml
<CustomField>
    <fullName>RH_Telefono__c</fullName>
    <label>Telefono</label>
    <length>255</length>
    <type>Text</type>
</CustomField>