force-app/main/default/objects/Account/fields/RH_Via__c.field-meta.xml
<CustomField>
    <fullName>RH_Via__c</fullName>
    <label>RH Via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>