force-app/main/default/objects/Account/recordTypes/RH.recordType-meta.xml
<RecordType>
    <fullName>RH</fullName>
    <active>true</active>
    <description>Account of rh users</description>
    <label>RH</label>
</RecordType>