force-app/main/default/objects/Account/recordTypes/RH_CLIENT.recordType-meta.xml
<RecordType>
    <fullName>RH_CLIENT</fullName>
    <active>true</active>
    <description>Our clients</description>
    <label>CLIENTS</label>
</RecordType>